1. Creating my Blog with Go Hugo and testing some utilities. *Tomorrow, I'm going to create my posts and give format to the site.

--- a/Blog/config.yml
+++ b/Blog/config.yml
@@ -1,5 +1,5 @@
-baseURL: "https://examplesite.com/"
-title: ExampleSite
+baseURL: ""
+title: My Blog
 paginate: 5
 theme: PaperMod
 
@@ -19,11 +19,11 @@ params:
   title: Blog
   description: "Knowledge blog"
   keywords: [Blog, Portfolio, Knowledge, Programming]
-  author: GermanHv
+  author: Alev GHv
   # author: ["Me", "You"] # multiple authors
   images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "January 2, 2006"
-  defaultTheme: auto # dark, light
+  defaultTheme: dark # dark, light
   disableThemeToggle: false
 
   ShowReadingTime: true
@@ -39,7 +39,7 @@ params:
   comments: false
   hidemeta: false
   hideSummary: false
-  showtoc: false
+  showtoc: true
   tocopen: false
   enableEmoji: true
   
@@ -59,13 +59,13 @@ params:
 
   # profile-mode
   profileMode:
-    enabled: false # needs to be explicitly set
-    title: ExampleSite
-    subtitle: "This is subtitle"
-    imageUrl: "<img location>"
-    imageWidth: 120
-    imageHeight: 120
-    imageTitle: my image
+    enabled: true # needs to be explicitly set
+    title: Blog
+    subtitle: "Alev GermánHv"
+    imageUrl: "https://avatars.githubusercontent.com/u/65383128?v=4"
+    imageWidth: 150
+    imageHeight: 150
+    imageTitle: Image Profile GitHub
     buttons:
       - name: Posts
         url: posts
@@ -79,11 +79,11 @@ params:
 
   socialIcons:
     - name: twitter
-      url: "https://twitter.com/"
+      url: "https://twitter.com/hv_german"
     - name: stackoverflow
       url: "https://stackoverflow.com"
     - name: github
-      url: "https://github.com/"
+      url: "https://github.com/GermanHv"
 
   analytics:
     google:
@@ -96,14 +96,9 @@ params:
   cover:
     hidden: true # hide everywhere but not in structured data
     hiddenInList: true # hide on list pages and home
-    hiddenInSingle: true # hide on single page
-    linkFullImages: false # Para habilitar los hipervínculos al tamaño completo de la imagen en las páginas de publicación, use
+    hiddenInSingle: false # hide on single page
+    linkFullImages: true # Para habilitar los hipervínculos al tamaño completo de la imagen en las páginas de publicación, use
     responsiveImages: true #Para reducir el tiempo de generación y el tamaño del sitio, puede deshabilitar esta característica usando
-
-
-
-
-    
 
   editPost:
     URL: "https://github.com/GermanHv/Blog/content"
@@ -125,17 +120,37 @@ params:
 menu:
   main:
     - identifier: categories
-      name: categories
+      name: Categories
       url: /categories/
       weight: 10
     - identifier: tags
-      name: tags
+      name: Tags
       url: /tags/
       weight: 20
+    - identifier: Archives
+      name: Archives
+      url: /archives/
+      weight: 30
     - identifier: example
       name: example.org
       url: https://example.org
-      weight: 30
+      weight: 40
+    - identifier: posts
+      name: Posts
+      url: /posts/ 
+      weight: 1
+    - identifier: baseof
+      name: baseof
+      url: /baseof/ 
+      weight: 5
+    - identifier: list
+      name: list
+      url: /list/ 
+      weight: 4
+    - identifier: search
+      name: Search
+      url: /search/ 
+      weight: 2
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
 markup:
